freesia/k8s/apps/temporis/prometheus/service-thanos-sidecar.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-thanos-sidecar
  labels:
    app.kubernetes.io/name: prometheus
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: grpc
      port: 10901
      targetPort: grpc
    - name: http
      port: 10902
      targetPort: http
  selector:
    app.kubernetes.io/name: prometheus
