freesia/k8s/apps/temporis/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app.kubernetes.io/name: prometheus
spec:
  ports:
    - name: http-web
      port: 9090
      targetPort: 9090
    - name: reloader-web
      appProtocol: http
      port: 8080
      targetPort: reloader-web
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/name: prometheus
  type: "ClusterIP"
