freesia/k8s/apps/temporis/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  labels:
    app.kubernetes.io/name: prometheus
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus-v3.harvestasya.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
